--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -27,25 +27,23 @@
                 android:id="@+id/username"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="96dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="16dp"
                 android:hint="@string/prompt_username"
                 android:inputType="textNoSuggestions"
                 android:text="@={viewModel.username}"
                 app:visibleGone="@{!viewModel.downloading}"
                 android:selectAllOnFocus="true"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
 
         <EditText
                 android:id="@+id/password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="16dp"
                 android:hint="@string/prompt_password"
                 android:imeActionLabel="@string/action_download_image"
                 android:imeOptions="actionDone"
@@ -53,9 +51,11 @@
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
                 app:visibleGone="@{!viewModel.downloading}"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/username"/>
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username"/>
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -64,18 +64,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="48dp"
-                android:layout_marginBottom="64dp"
                 android:text="@string/action_download_image"
                 android:onClick="@{() -> viewModel.downloadImage()}"
                 app:visibleGone="@{!viewModel.downloading}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password"
-                app:layout_constraintVertical_bias="0.2"/>
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
+                android:layout_marginRight="8dp"
+        />
 
         <ProgressBar
                 android:id="@+id/loading"
@@ -96,19 +93,14 @@
                 android:id="@+id/downloadedImage"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
                 android:src="@{viewModel.bitmapDrawable}"
                 app:visibleGone="@{viewModel.downloadedImageVisible}"
-                app:layout_constraintTop_toBottomOf="@+id/download_image"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 tools:srcCompat="@tools:sample/avatars[0]"
-        />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/loading"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
