--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -17,33 +17,40 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/double_base_margin"
+            android:paddingLeft="@dimen/double_base_margin"
+            android:paddingRight="@dimen/double_base_margin"
+            android:paddingTop="@dimen/double_base_margin"
             tools:context="ui.main.MainView">
 
         <EditText
                 android:id="@+id/username"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="@dimen/eightfold_base_margin"
+                android:layout_marginEnd="32dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
                 android:hint="@string/prompt_username"
                 android:inputType="textNoSuggestions"
                 android:text="@={viewModel.username}"
-                app:visibleGone="@{!viewModel.downloading}"
                 android:selectAllOnFocus="true"
+                app:showError="@{viewModel.usernameError}"
+                app:visibleGone="@{!viewModel.downloading}"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintEnd_toStartOf="@+id/loading"
+                app:layout_constraintTop_toTopOf="parent"/>
 
         <EditText
                 android:id="@+id/password"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="@dimen/triple_base_margin"
+                android:layout_marginEnd="32dp"
+                android:layout_marginLeft="@dimen/triple_base_margin"
+                android:layout_marginRight="@dimen/triple_base_margin"
                 android:hint="@string/prompt_password"
                 android:imeActionLabel="@string/action_download_image"
                 android:imeOptions="actionDone"
@@ -51,11 +58,11 @@
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
                 app:visibleGone="@{!viewModel.downloading}"
+                app:showError="@{viewModel.passwordError}"
+                app:onEditorAction="@{viewModel}"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username"/>
+                app:layout_constraintEnd_toStartOf="@+id/loading"
+                app:layout_constraintTop_toBottomOf="@+id/username"/>
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -66,41 +73,67 @@
                 android:layout_gravity="start"
                 android:text="@string/action_download_image"
                 android:onClick="@{() -> viewModel.downloadImage()}"
+                android:layout_marginTop="@dimen/sixfold_base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
                 app:visibleGone="@{!viewModel.downloading}"
-                android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/loading"
-                android:layout_marginRight="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/password"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/loading"
         />
 
         <ProgressBar
                 android:id="@+id/loading"
-                app:visibleGone="@{viewModel.downloading}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginBottom="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                app:visibleGone="@{viewModel.downloading}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+        />
+
+        <TextView
+                android:id="@+id/loadingTextView"
+                android:text="@string/loadingTex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                app:visibleGone="@{viewModel.downloading}"
+                app:layout_constraintTop_toBottomOf="@+id/loading"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+        />
 
         <ImageView
                 android:id="@+id/downloadedImage"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
                 android:src="@{viewModel.bitmapDrawable}"
+                android:layout_marginBottom="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                android:layout_marginTop="@dimen/base_margin"
                 app:visibleGone="@{viewModel.downloadedImageVisible}"
-                tools:srcCompat="@tools:sample/avatars[0]"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/loading"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/loading"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars[0]"
+        />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
