--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -17,35 +17,42 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/double_base_margin"
+            android:paddingLeft="@dimen/double_base_margin"
+            android:paddingRight="@dimen/double_base_margin"
+            android:paddingTop="@dimen/double_base_margin"
             tools:context="ui.main.MainView">
+
 
         <EditText
                 android:id="@+id/username"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="96dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="@dimen/eightfold_base_margin"
+                android:layout_marginEnd="32dp"
+                android:layout_marginLeft="@dimen/triple_base_margin"
+                android:layout_marginRight="@dimen/triple_base_margin"
                 android:hint="@string/prompt_username"
                 android:inputType="textNoSuggestions"
                 android:text="@={viewModel.username}"
-                app:visibleGone="@{!viewModel.downloading}"
                 android:selectAllOnFocus="true"
+                app:visibleGone="@{!viewModel.downloading}"
+                app:showError="@{viewModel.usernameError}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+        />
 
         <EditText
                 android:id="@+id/password"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="@dimen/triple_base_margin"
+                android:layout_marginEnd="32dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
                 android:hint="@string/prompt_password"
                 android:imeActionLabel="@string/action_download_image"
                 android:imeOptions="actionDone"
@@ -53,6 +60,8 @@
                 android:selectAllOnFocus="true"
                 android:text="@={viewModel.password}"
                 app:visibleGone="@{!viewModel.downloading}"
+                app:showError="@{viewModel.passwordError}"
+                app:onEditorAction="@{viewModel}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/username"/>
@@ -64,44 +73,59 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="48dp"
-                android:layout_marginBottom="64dp"
+                android:layout_marginStart="@dimen/sixfold_base_margin"
+                android:layout_marginEnd="@dimen/sixfold_base_margin"
                 android:text="@string/action_download_image"
                 android:onClick="@{() -> viewModel.downloadImage()}"
+                android:layout_marginTop="@dimen/sixfold_base_margin"
                 app:visibleGone="@{!viewModel.downloading}"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password"
-                app:layout_constraintVertical_bias="0.2"/>
+                app:layout_constraintTop_toBottomOf="@+id/password"/>
 
         <ProgressBar
                 android:id="@+id/loading"
-                app:visibleGone="@{viewModel.downloading}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginBottom="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                app:visibleGone="@{viewModel.downloading}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+        />
+
+        <TextView
+                android:id="@+id/loadingTextView"
+                android:text="@string/loadingTex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                app:visibleGone="@{viewModel.downloading}"
+                app:layout_constraintTop_toBottomOf="@+id/loading"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+        />
 
         <ImageView
                 android:id="@+id/downloadedImage"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
+                android:layout_marginBottom="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/base_margin"
+                android:layout_marginStart="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/base_margin"
+                android:layout_marginRight="@dimen/base_margin"
+                android:layout_marginTop="@dimen/base_margin"
                 android:src="@{viewModel.bitmapDrawable}"
                 app:visibleGone="@{viewModel.downloadedImageVisible}"
                 app:layout_constraintTop_toBottomOf="@+id/download_image"
