--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="zero_margin">0dp</dimen>
+    <dimen name="base_margin">8dp</dimen>
+    <dimen name="double_base_margin">16dp</dimen>
+    <dimen name="triple_base_margin">24dp</dimen>
+    <dimen name="sixfold_base_margin">48dp</dimen>
+    <dimen name="eightfold_base_margin">64dp</dimen>
+    <dimen name="image_size">200dp</dimen>
 </resources>
