--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -135,5 +135,23 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars[0]"
         />
+
+        <TextView
+                android:id="@+id/downloadResultMessageTextView"
+                android:text="@{viewModel.downloadResultMessage}"
+                android:layout_width="@dimen/zero_margin"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/base_margin"
+                android:layout_marginEnd="@dimen/triple_base_margin"
+                android:layout_marginRight="@dimen/triple_base_margin"
+                android:layout_marginTop="@dimen/base_margin"
+                android:layout_marginLeft="@dimen/triple_base_margin"
+                android:layout_marginStart="@dimen/triple_base_margin"
+                app:visibleGone="@{viewModel.downloadResultMessageVisible}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/loadingProgressBar"
+        />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
