--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -128,6 +128,7 @@
                 android:layout_marginLeft="@dimen/base_margin"
                 android:layout_marginStart="@dimen/base_margin"
                 android:layout_marginTop="@dimen/base_margin"
+                android:contentDescription="@string/image"
                 app:visibleGone="@{viewModel.downloadedImageVisible}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
