--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -64,7 +64,8 @@
                 app:onEditorAction="@{viewModel}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"/>
+                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
+        />
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -129,6 +130,7 @@
                 android:layout_marginRight="@dimen/base_margin"
                 android:layout_marginTop="@dimen/base_margin"
                 android:src="@{viewModel.bitmapDrawable}"
+                android:contentDescription="@string/image"
                 app:visibleGone="@{viewModel.downloadedImageVisible}"
                 app:layout_constraintTop_toBottomOf="@+id/downloadButton"
                 app:layout_constraintBottom_toBottomOf="parent"
