--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -27,11 +27,11 @@
                 android:id="@+id/usernameEditText"
                 android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="@dimen/quadruple_base_margin"
                 android:layout_marginTop="@dimen/eightfold_base_margin"
-                android:layout_marginEnd="32dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_marginEnd="@dimen/quadruple_base_margin"
+                android:layout_marginLeft="@dimen/quadruple_base_margin"
+                android:layout_marginRight="@dimen/quadruple_base_margin"
                 android:hint="@string/prompt_username"
                 android:inputType="textNoSuggestions"
                 android:text="@={viewModel.username}"
@@ -46,9 +46,9 @@
                 android:id="@+id/passwordEditText"
                 android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="@dimen/quadruple_base_margin"
                 android:layout_marginTop="@dimen/triple_base_margin"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="@dimen/quadruple_base_margin"
                 android:layout_marginLeft="@dimen/triple_base_margin"
                 android:layout_marginRight="@dimen/triple_base_margin"
                 android:hint="@string/prompt_password"
