--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="base_margin">8dp</dimen>
     <dimen name="double_base_margin">16dp</dimen>
     <dimen name="triple_base_margin">24dp</dimen>
+    <dimen name="quadruple_base_margin">32dp</dimen>
     <dimen name="sixfold_base_margin">48dp</dimen>
     <dimen name="eightfold_base_margin">64dp</dimen>
     <dimen name="image_size">200dp</dimen>
