--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,7 +12,6 @@
                 type="com.ciompa.cleverlance.ui.main.MainViewModel"/>
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
@@ -23,9 +22,8 @@
             android:paddingTop="@dimen/double_base_margin"
             tools:context="ui.main.MainView">
 
-
-        <EditText
-                android:id="@+id/usernameEditText"
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/usernameTextInputLayout"
                 android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/quadruple_base_margin"
@@ -34,41 +32,57 @@
                 android:layout_marginLeft="@dimen/triple_base_margin"
                 android:layout_marginRight="@dimen/triple_base_margin"
                 android:hint="@string/prompt_username"
-                android:inputType="textNoSuggestions"
-                android:text="@={viewModel.username}"
-                android:selectAllOnFocus="true"
                 app:visibleGone="@{!viewModel.downloading}"
-                app:showError="@{viewModel.usernameError}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-        />
+        >
 
-        <EditText
-                android:id="@+id/passwordEditText"
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/usernameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textNoSuggestions"
+                    android:text="@={viewModel.username}"
+                    app:showError="@{viewModel.usernameError}"
+                    android:selectAllOnFocus="true"
+            />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/passwordTextInputLayout"
                 android:layout_width="@dimen/zero_margin"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/quadruple_base_margin"
-                android:layout_marginTop="@dimen/triple_base_margin"
                 android:layout_marginEnd="@dimen/quadruple_base_margin"
                 android:layout_marginLeft="@dimen/quadruple_base_margin"
                 android:layout_marginRight="@dimen/quadruple_base_margin"
+                android:layout_marginTop="@dimen/quadruple_base_margin"
                 android:hint="@string/prompt_password"
-                android:imeActionLabel="@string/action_download_image"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                android:text="@={viewModel.password}"
                 app:visibleGone="@{!viewModel.downloading}"
-                app:showError="@{viewModel.passwordError}"
-                app:onEditorAction="@{viewModel}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
-        />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout"
+        >
 
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeActionLabel="@string/action_download_image"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true"
+                    android:text="@={viewModel.password}"
+                    app:showError="@{viewModel.passwordError}"
+                    app:onEditorAction="@{viewModel}"
+            />
 
-        <androidx.appcompat.widget.AppCompatButton
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
                 android:id="@+id/downloadButton"
                 android:enabled="@{viewModel.downloadButtonEnabled}"
                 android:layout_width="wrap_content"
@@ -82,8 +96,7 @@
                 app:visibleGone="@{!viewModel.downloading}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
         />
 
         <ProgressBar
