--- a/app/src/main/res/layout-land/main_fragment.xml
+++ b/app/src/main/res/layout-land/main_fragment.xml
@@ -37,6 +37,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/loadingProgressBar"
                 app:layout_constraintTop_toTopOf="parent"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >
 
             <com.google.android.material.textfield.TextInputEditText
@@ -65,6 +66,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/loadingProgressBar"
                 app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         >
 
             <com.google.android.material.textfield.TextInputEditText
